// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test of <AddNewOrderPage /> Default view 1`] = `
<form
  className="mt-4 row justify-content-center"
  onBlur={[Function]}
  onSubmit={[Function]}
>
  <div
    className="form-group row text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <label
      className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label font-weight-bold"
      htmlFor="name"
    >
      Enter 
      name
    </label>
    <div
      className="col-sm-8 col-md-8"
    >
      <input
        aria-describedby={null}
        className="form-control"
        id="name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        required={true}
        title="Message"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="form-group row text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <label
      className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label font-weight-bold"
      htmlFor="email"
    >
      Enter 
      email
    </label>
    <div
      className="col-sm-8 col-md-8"
    >
      <input
        aria-describedby={null}
        className="form-control"
        id="email"
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        required={true}
        title="Message"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="form-group  text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <div
      className="mb-2 font-weight-bold"
    >
      Choose size of clock
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        id="smallSize"
        name="size"
        onChange={[Function]}
        type="radio"
        value="small"
      />
      <label
        className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label "
        htmlFor="smallSize"
      >
        Small
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        id="middleSize"
        name="size"
        onChange={[Function]}
        type="radio"
        value="middle"
      />
      <label
        className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label "
        htmlFor="middleSize"
      >
        Middle
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        id="largeSize"
        name="size"
        onChange={[Function]}
        type="radio"
        value="large"
      />
      <label
        className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label "
        htmlFor="largeSize"
      >
        Large
      </label>
    </div>
  </div>
  <div
    className="form-group  text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <div
      className="mb-2 font-weight-bold"
    >
      Choose town
    </div>
    <div
      className="form-check-inline"
    >
      <div
        className="form-check form-check-inline"
      >
        <input
          className="form-check-input"
          id="Name"
          name="town"
          onChange={[Function]}
          type="radio"
          value="Name"
        />
        <label
          className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label "
          htmlFor="Name"
        >
          Name
        </label>
      </div>
    </div>
  </div>
  <div
    className="form-group  text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <div
      className="mb-2 font-weight-bold"
    >
      Choose date and time
      <br />
      <sub>
        *time from 8 to 18
      </sub>
    </div>
    <input
      aria-describedby={null}
      className="mr-1"
      id="date"
      max="2021-09-30"
      min="2020-09-30"
      name="date"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      required={true}
      title="Message"
      type="date"
      value=""
    />
    <input
      aria-describedby={null}
      className=""
      id="time"
      max={null}
      min={null}
      name="time"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      required={true}
      title="Message"
      type="time"
      value=""
    />
  </div>
  <div
    className="row justify-content-sm-center col-12"
  >
    <input
      className="btn btn-primary col-12 col-sm-4 mt-3"
      type="submit"
      value="Next step"
    />
  </div>
</form>
`;

exports[`Test of <AddNewOrderPage /> The view after click on submit button and waiting response from server 1`] = `
<form
  className="mt-4 row justify-content-center"
  onBlur={[Function]}
  onSubmit={[Function]}
>
  <div
    className="form-group row text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <label
      className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label font-weight-bold"
      htmlFor="name"
    >
      Enter 
      name
    </label>
    <div
      className="col-sm-8 col-md-8"
    >
      <input
        aria-describedby={null}
        className="form-control"
        id="name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        required={true}
        title="Message"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="form-group row text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <label
      className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label font-weight-bold"
      htmlFor="email"
    >
      Enter 
      email
    </label>
    <div
      className="col-sm-8 col-md-8"
    >
      <input
        aria-describedby={null}
        className="form-control"
        id="email"
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        required={true}
        title="Message"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="form-group  text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <div
      className="mb-2 font-weight-bold"
    >
      Choose size of clock
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        id="smallSize"
        name="size"
        onChange={[Function]}
        type="radio"
        value="small"
      />
      <label
        className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label "
        htmlFor="smallSize"
      >
        Small
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        id="middleSize"
        name="size"
        onChange={[Function]}
        type="radio"
        value="middle"
      />
      <label
        className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label "
        htmlFor="middleSize"
      >
        Middle
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        id="largeSize"
        name="size"
        onChange={[Function]}
        type="radio"
        value="large"
      />
      <label
        className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label "
        htmlFor="largeSize"
      >
        Large
      </label>
    </div>
  </div>
  <div
    className="form-group  text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <div
      className="mb-2 font-weight-bold"
    >
      Choose town
    </div>
    <div
      className="form-check-inline"
    >
      <div
        className="form-check form-check-inline"
      >
        <input
          className="form-check-input"
          id="Name"
          name="town"
          onChange={[Function]}
          type="radio"
          value="Name"
        />
        <label
          className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label "
          htmlFor="Name"
        >
          Name
        </label>
      </div>
    </div>
  </div>
  <div
    className="form-group  text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <div
      className="mb-2 font-weight-bold"
    >
      Choose date and time
      <br />
      <sub>
        *time from 8 to 18
      </sub>
    </div>
    <input
      aria-describedby={null}
      className="mr-1"
      id="date"
      max="2021-09-30"
      min="2020-09-30"
      name="date"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      required={true}
      title="Message"
      type="date"
      value=""
    />
    <input
      aria-describedby={null}
      className=""
      id="time"
      max={null}
      min={null}
      name="time"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      required={true}
      title="Message"
      type="time"
      value=""
    />
  </div>
  <div
    className="row justify-content-sm-center col-12"
  >
    <input
      className="btn btn-primary col-12 col-sm-4 mt-3"
      type="submit"
      value="Loading..."
    />
  </div>
</form>
`;

exports[`Test of <AddNewOrderPage /> The view when towns array is empty 1`] = `
<form
  className="mt-4 row justify-content-center"
  onBlur={[Function]}
  onSubmit={[Function]}
>
  <div
    className="form-group row text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <label
      className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label font-weight-bold"
      htmlFor="name"
    >
      Enter 
      name
    </label>
    <div
      className="col-sm-8 col-md-8"
    >
      <input
        aria-describedby={null}
        className="form-control"
        id="name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        required={true}
        title="Message"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="form-group row text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <label
      className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label font-weight-bold"
      htmlFor="email"
    >
      Enter 
      email
    </label>
    <div
      className="col-sm-8 col-md-8"
    >
      <input
        aria-describedby={null}
        className="form-control"
        id="email"
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        required={true}
        title="Message"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="form-group  text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <div
      className="mb-2 font-weight-bold"
    >
      Choose size of clock
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        id="smallSize"
        name="size"
        onChange={[Function]}
        type="radio"
        value="small"
      />
      <label
        className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label "
        htmlFor="smallSize"
      >
        Small
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        id="middleSize"
        name="size"
        onChange={[Function]}
        type="radio"
        value="middle"
      />
      <label
        className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label "
        htmlFor="middleSize"
      >
        Middle
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        id="largeSize"
        name="size"
        onChange={[Function]}
        type="radio"
        value="large"
      />
      <label
        className="pl-0 pr-0 col-sm-4 col-md-4 col-form-label "
        htmlFor="largeSize"
      >
        Large
      </label>
    </div>
  </div>
  <div
    className="form-group  text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <div
      className="mb-2 font-weight-bold"
    >
      Choose town
    </div>
    -- List is empty --
  </div>
  <div
    className="form-group  text-center text-sm-left col-12 col-md-10 col-lg-8"
  >
    <div
      className="mb-2 font-weight-bold"
    >
      Choose date and time
      <br />
      <sub>
        *time from 8 to 18
      </sub>
    </div>
    <input
      aria-describedby={null}
      className="mr-1"
      id="date"
      max="2021-09-30"
      min="2020-09-30"
      name="date"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      required={true}
      title="Message"
      type="date"
      value=""
    />
    <input
      aria-describedby={null}
      className=""
      id="time"
      max={null}
      min={null}
      name="time"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      required={true}
      title="Message"
      type="time"
      value=""
    />
  </div>
  <div
    className="row justify-content-sm-center col-12"
  >
    <input
      className="btn btn-primary col-12 col-sm-4 mt-3"
      type="submit"
      value="Next step"
    />
  </div>
</form>
`;
